--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a:hover
     text-align: center;
     color: #ffffff;
     height: 400px;
-    background-image: url("showcase.jpg"/);
+    background-image: url(showcase.jpg);
     background-repeat: no-repeat;
     background-position:center;
     background-size: cover;
